styles/main.css
@import url('https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:ital,wght@0,400;0,600;0,700;1,400&display=swap');
@import url("https://use.typekit.net/oio2onf.css");

:root{
  --dark-blue: #1A3651;
  --dark-blue-300: #385876;
  --med-blue: #526fa7;  
  --lt-blue: #93bdea;
  --light-gray: #EAECEF;
  --teal: #45C4B0;
  --purple: #955695;
  --body-text: "Barlow Semi Condensed", sans-serif;
  --heading-text: "chainprinter", sans-serif;
}

* {
  box-sizing: border-box;
}

html {
font-size: 62.5% /* using rem for font*/
}

body{
  font-size: calc(1em + 1vw);
  font-family: var(--body-text);
  /* background-color: var(--dark-blue); */
  /* display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center; */
  height: 100vh;
  margin: 0;
  padding: 0;
}

.main{
  background-color: var(--dark-blue);
}

h1, h2, h3 ,h4 {
  font-family: var(--heading-text);
  font-weight: 400;
  font-style: normal;
  color: var(--dark-blue);
}

a {
  text-decoration: none;
  color: inherit;
}

a:visited {
  /* color: var(--teal); */
}

a:focus {
  border-bottom: #fff;
}

:focus-visible{
  outline: 1px dashed var(--teal);
}

a:active {
  color: var(--teal);
}

/* Mobile Nav */

.nav > .logo{ 
  width: 20rem;
}

.text {
  text-transform: uppercase;
}

.nav-btn{
  border: none;
  background-color: transparent;
  cursor: pointer;
  font-size: 1.8rem;
}

.open-btn{
  position: fixed;
  top: 30px;
  left: 30px;
  color: var(--med-blue);
}

.close-btn{
  position: absolute;
  top: 25px;
  right: 30px;
  color: var(--med-blue);
  opacity: 0.7;
  transition: opacity 0.2s ease;
}

.close-btn:hover{
  opacity: 1;
}

.nav {
  position: fixed;
  top: 0;
  left: 0;
  height: 100vh;
  transform: translateX(-100%);
  transition: transform 0.3s ease-in-out;
}

.nav.visible{
  transform: translateX(0);
}

.nav-purple{
  background-color: var(--purple);
  width: 60%;
  max-width: 480px;
  min-width: 320px;
  transition-delay: 0.4s;
}

.nav-purple.visible{
  transition-delay: 0s;
}

.nav-teal{
  background-color: var(--teal);
  width: 95%;
  transition-delay: 0.2s;
}

.nav-teal.visible{
  transition-delay: 0.2s;
}

.nav-med-blue{
  background-color: var(--dark-blue);
  width: 95%;
  padding: 40px;
  position: relative;
  transition-delay: 0s;
}

.nav-med-blue.visible{
  transition-delay: 0.4s;
}


.list {
  list-style-type: none;
  padding: 0;
}

.list li {
  margin: 20px;
}

.list li a{
  color: #ffffff;
  opacity: 0.9;
  font-size: 1.2rem;
  text-decoration: none;
  text-transform: uppercase;
}

.list ul {
  list-style-type: none;
  padding-left: 20px;
}

/* End Mobile Nav */

nav{
  background-color: var(--dark-blue);
  display: flex;
  justify-content: space-between;
  align-items: center;
}

nav a{
  width: 100%;
  display: flex;
  align-items: center;
}

nav .logo{
  background-image: url('/assets/images/logo.svg');
  background-size: contain;
  background-repeat: no-repeat;
  margin-left: 2rem;
  height: 5.8rem;
  width: 100%;
}

nav > ul{
  display: flex;
  align-items: center;
  padding: 0 1rem;
  margin-right: 1rem;
  z-index: 10;
}

nav > ul > li{
  display: flex;
  color: #ffffff;
  text-transform: uppercase;
  font-family: var(--body-text);
  font-size: 1.8rem;
  font-weight: 600;
  list-style-type: none;
  padding: 1.2rem;
  margin: 1rem;
  transition: transform .2s ease-in, color 0.3s ease-in;
  cursor: pointer;
  align-items:center;
}

nav > ul > li:hover{
  transform: scale(1.2);
  color: var(--lt-blue);
}

nav svg.icon{
  width: 1em;
  height: 1em;
  font-size: 1em;
  line-height: 100%;
  overflow: visible;
  display: inline-block;
  margin-left: 5px;
  margin-top: 5px;
  transition: all 0.3s ease-in;
}

/* Keep or no */
/* nav > ul > li:hover svg path{
  fill: var(--lt-blue);
} */

.more{
  margin-left: 5px;
  display: inline-block;
  animation: 0.2s 1 normal forwards running more;
}

@keyframes more{
  0% {
    transform: rotate(0deg);
  }
  
  100% {
    transform: rotate(180deg);
  }
}

.drop-down:hover > .animate{
  margin-left: 5px;
  animation: 0.4s 1 normal forwards running more;
  scale: 1;
}

.nav-dropdown{
  /* Add in dropdown menu */
  display: flex;
  flex-direction: column;
  position: absolute;
  padding: 1rem;
  top: 5rem;
  border-radius: 0.25em;
  background-color: #fff;
  color: var(--dark-blue);
  box-shadow: 0 0 0.5rem rgb(76, 66, 76, 0.5);
  visibility: hidden;
}

.nav-dropdown.visible{
  visibility: visible;
  animation: fade-in-top 1s cubic-bezier(0.39, 0.575, 0.565, 1) both;
}

.nav-dropdown li{
  list-style: none;
  color: var(--dark-blue);
  padding: 1.2rem;
}
.dropdown{
  color: var(--dark-blue);
  font-family: var(--body-text);
}


/* Navigation Style End */

section.hero{
  background-color: var(--light-gray);
  color: var(--dark-blue);
  margin: 0.7rem 2rem;
  height: 700px;
  border-radius: 8px;
  display: flex;
  align-items: center;
  flex-direction: column;
  justify-content: center;
  box-shadow:
  12.5px 12.5px 17.2px -38px rgba(0, 0, 0, 0.025),
  100px 100px 137px -38px rgba(0, 0, 0, 0.05);
}

/* Title-section Styling */
.title-section{
  position: relative;
  display: flex;
  flex-direction: column;
  align-items:center;
  justify-content: center;
  height: 80%;
  width: 100%;
  /* Take out for prod */

}

.title-section h1{
  font-size: 2.2em;
  font-weight: 700;
  margin-bottom: 0;
}

.title-section h2 {
  font-size: 1.2em;
  color:var(--dark-blue-300);
  letter-spacing: -1px;
}

.title-section > .dots{
  position: absolute;
  bottom: 7rem;
}

button{
  display: inline-block;
  position: relative;
  display: flex;
  align-self: flex-end;
  font-size: 2rem;
  margin-right: 10rem;
  padding: 1rem 1rem;
  border: none;
  background: none;
}

button::before, button::after {
  content: "";
  width: 0;
  height: 2px;
  position: absolute;
  transition: all 0.2s linear;
  background: var(--lt-blue);
}

.explore-button::before, .explore-button::after{
  content: "";
  width: 2px;
  height: 0;
  position: absolute;
  transition: all 0.2s linear;
  background: var(--lt-blue);
}

button:hover::before,
button:hover::after{
  width: 100%;
}

button:hover span::before, button:hover span::after{
  height: 100%;
}

.btn-1::after{
  left:0;
  bottom: 0;
  transition-duration: 0.4s;
}
.btn-1 .explore-button::after{
  right:0;
  top: 0;
  transition-duration: 0.4s;
}
.btn-1::before{
  right: 0;
  top: 0;
  transition-duration: 0.4s;
}
.btn-1 .explore-button::before{
  left: 0;
  bottom: 0;
  transition-duration: 0.4s;
}

.explore-button{
  font-family:var(--body-text);
  font-weight: 600;
  font-size: 2.3rem;
  display: flex;
  align-self: flex-end;
  color: var(--dark-blue);
  /* Take out for prod */
  transition: transform 0.2s ease;
}

.explore-button:hover{
  transform: scale(1.2);
}

.explore-button svg {
  margin-left: 0.8em;
  color: var(--dark-blue);
}

.animation{
  transition: all .2s linear;
}

#logo{
  height: 50px;
}

/* Explore page */

.top-blue {
  /* clip-path: polygon(0 0,100% 0,100% 100%,0 calc(100% - 100px)); */
  background-color: var(--dark-blue);
  height: auto;
  width: 100%;
  position: relative;
}
.top-blue::after {
  content: '';
  border-bottom-left-radius: 50% 100%;
  border-bottom-right-radius: 50% 100%;
  position: absolute;
  bottom: -10;
  z-index: -1;
  width: 100%;
  background-color: var(--dark-blue);
  height: 65%;
  box-shadow: 0 0 0.5rem rgb(76, 66, 76, 0.5);
}

.top-blue h2{
  font-size: 4rem;
  color: var(--light-gray);
  margin: 0;
  padding: 5rem;
  text-align: center;
  padding-top: 10rem;
}

#video{
  margin-top: 20rem;
  margin-left: 2rem;
}

/* Explore page styling end */


/* Footer Section */
footer.grey{
  background-color:var(--light-gray);
  margin-top: 10rem;
  width: 100%;
  height: 20vh;
  padding-top: 5rem;
  padding-left: 5rem;
  display: flex;
  justify-content: space-between
}

footer.grey h3, footer.grey h4{
  color: var(--dark-blue);
  font-size: 2rem;
  margin-top: 0;
  margin-bottom: 0.5rem;
}

footer.grey span.contact{
  letter-spacing: 1px;
  font-size: 1.7rem;
  font-family: var(--body-text);
  color: var(--dark-blue);
  padding-left: 1rem;
}

footer.grey ul{
  color: var(--dark-blue);
  list-style-type: none;
}

.footer-right{
  margin-left: 0.5rem;
}
.footer-right > .menu-nav{
  margin-right: 7rem;
  display: flex;
  width: 50%;
  gap: 10px;
}


/* Testimonials Section */

.testimonial-container{
  color: var(--dark-blue);
  background-color: var(--light-gray);
  border-radius: 1rem;
  margin: 1.2rem auto;
  padding: 5rem 8rem;
  max-width: 80vh;
  position: relative;
  box-shadow: 0 0 0.5rem rgb(76, 66, 76, 0.5);
}

.fa-quote{
  color: rgba(26,54,81, 0.6);
  font-size: 2.8rem;
  position: absolute;
  top: 70px;
}

.fa-quote-right{
  left: 40px;
}

.fa-quote-left{
  right: 40px;
}

.testimonial{
  line-height: 2.8rem;
  text-align: justify;
}

.user{
  display: flex;
  align-items: center;
  justify-content: center;
}

.user .user-image{
  border-radius: 50%;
  height: 7.5rem;
  width: 7.5rem;
  object-fit: cover;
}

.user .user-details{
  margin-left: 1rem;
}

.user .username{
  margin: 1rem;
}

.user .role {
  font-weight: normal;
  margin: 10px 0;
  font-size: 1.5rem;
}


.progress-bar {
  background-color:var(--teal);
  height: 4px;
  width: 100%;
  /* Box will change every 10 sec */
  animation: grow 10s linear infinite;
  /* Positions the animation to start from left */
  transform-origin: left;
}

@keyframes grow{
  0% {
    transform: scaleX(0);
  }
}

@media(max-width: 768px){
  .fa-quote {
    display: none;
  }
  .testimonial-container{
    max-width: 50vh;
    padding: 1rem 3rem;
  }
  .user .role{
    margin: 2px 0;
  }
  .testimonial{
    line-height: 1.8rem;
    text-align: justify;
  }
}

